<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.lima.douglas.atmempresaconsultoria.ContatoActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView11"
            android:layout_below="@+id/textView11"
            android:text="@string/celular"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="32dp"
            android:text="@string/telefone"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/detalhe_contato" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_marginBottom="38dp"
            android:layout_marginStart="22dp"
            android:layout_toEndOf="@+id/imageView5"
            android:text="@string/Contato"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/Verde_Claro" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imageView5"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="70dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
